<resources>
    <string name="app_name">AppTest</string>
    <string name="topuptagihan">TopUp &amp; Tagihan</string>
    <string name="coin">553.269</string>
    <string name="agen">Agen</string>
    <string name="create_new_password">Create New Password</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="alert1">Must be at least 8 characters.</string>
    <string name="alert2">Both passwords must match.</string>
    <string name="tv_helper_make_password">Buat Password Untuk Jadi Agen</string>
    <string name="tv_helper_make_password_2">Dapatkan lebih banyak keuntungan!</string>
    <string name="mini_game">Mini Game</string>
    <string name="buat_password">Buat Password</string>
    <string name="nanti">Nanti</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</string>
    <string name="ok">Ok</string>
    <string name="password_berhasil_dibuat">Password berhasil dibuat</string>
    <string name="selamat_pin_berhasil_dirubah_gunakan_untuk_aktifitas_di_dalam_cashtree">Selamat, Pin berhasil dirubah, gunakan \n untuk aktifitas di dalam cashtree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools_1">Cats, just like people,  are subject to asthma. Dust, smoke,  and other forms of air pullution in your cat\'s environment can be troublesome sources of irritation.</string>
    <string name="asd">Cats, just like people, are subject to asthma. Dust, smoke, and other forms of air pullution in your cats environment can be troublesome sources of irritation.</string>
    <string name="reaload">Reaload</string>
    <string name="lorem_onboard">Lorem Ipsum Dolor Sit Amet</string>
    <string name="lorem_desc_onboard">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="lorem_1_onboard">Benefit 1. Lorem ipsum dolor sit amet</string>
    <string name="lorem_2_onboard">Benefit 2. Lorem ipsum dolor sit amet</string>
    <string name="lorem_3_onboard">Benefit 3. Lorem ipsum dolor sit amet</string>
    <string name="home">Home</string>
</resources>